  BugFix: Fix command line paths in quotes ending with "\" (#1963523)
  BugFix: Command line description text starting with "/" confused
    WinMerge (#1973225)
  BugFix: Fix showing differences in the end of the line (#1883409, #1962816)
  BugFix: Item count in statusbar not get cleared (#1976480)
  BugFix: ISL file syntax highlighting starts comment with { (#1981326)
  New translation: Greek (#1968429)
  New translation: Romanian (#1939729)
  New translation: Ukrainian (#1973149, #1974021)
  Translation updates:
  - Bulgarian (#1957434)
  - Croatian (#1958283)
  - German (#1949068)
  - Italian (#1939235)
  - Korean (#1978362)
  - Polish (#1934655)
  - Swedish (#1950188, #1980970)

WinMerge 2.8.0 - 2008-04-03 (r5254)
  Installer: Use correct way to create start menu web link (#1913919)
  Installer: Updated the side art of the installer application (#1915012)
  Update URLs and switch to 2.8 manual (#1919965)
  New splash screen (#1914869)
  Create separate document for compiling WinMerge (#1927502)
  Update InnoSetup translations (#1931492)
  Manual and documentation updates
  BugFix: Installer could create a registry access error (#1909967)
  BugFix: The filter text box in Open-dialog sometimes displayed some garbage
    data (#1915424)
  BugFix: Print area was not clipped correctly. (#1915536)
  BugFix: Undo after pane swapping (#1915536, #1923625)
  BugFix: Quick compare for same folder didn't show differences (#1918599)
  BugFix: Installer didn't have ChangeLog.txt included (r5256)
  Translation updates:
  - Brazilian (#1913723)
  - Chinese Traditional (#1927605)
  - French (#1920380)
  - German (#1918139)
  - Japanese (r5153)
  - Russian (#1914466)
  - Spanish (#1907152, r5252)
  - Swedish (#1908289)

WinMerge 2.8 RC - 2008-03-04 (r5125)
  Update developers list in splash screen (#1891548)
  Better error handling for Excel plugin (#1510293)
  Add macros, bookmarks and document properties to Word plugin (#1510298)